--- a/estilo/style.css
+++ b/estilo/style.css
@@ -2,6 +2,15 @@
     text-align: right;
 }
 
+.centrar {
+    width: 50%;
+    margin: 0 auto;
+}
+
+.cursiva {
+    font-style: oblique;
+}
+
 .titulo {
     font-size: 20px;
     font-weight: bold;
