--- a/style.css
+++ b/style.css
@@ -1,38 +1,40 @@
 body {
-    background: #1d1a1a;
+    background: #EFE5E5;
     width: 99%;
     height: auto;
 }
 
 #basaluan {
-    width: 180px;
-    height: 180px;
+    width: 9%;
+    height: auto;
     float: left;
 }
 
 .encabezado {
-    width: 80%;
+    width: 85%;
     height: auto;
     float: right;
-    margin: auto 5px;
+    margin: auto 1%;
+    background-image: url(/inicio/archivos/fondo.gif);
+    background-size: 8% auto;
     text-align: center;
-    color: #ffffff;
-    background-color: black;
+    color: #000000;
+    text-shadow: 0 0 20px #fefcc9, 2px -2px 3px #feec85, -4px -4px 5px #ffae34, 5px -10px 6px #ec760c, -5px -12px 8px #cd4606, 0 -15px 20px #973716, 2px -15px 20px #451b0e;
 }
 
 .barra_navegacion {
-    width: 80%;
+    width: 85%;
     height: auto;
     float: right;
-    margin: auto 5px;
-    text-align: center;
-    color: #000000;
-    background: #a00303;
+    margin: auto 1%;
+    background-color: #DB1616;
 }
 
 #enlaces {
     margin: auto 20%;
     text-align: center;
+    color: #000000;
+    text-transform: uppercase;
 }
 
 #informacion {
@@ -52,11 +54,11 @@ a:link {
 }
 
 a:visited {
-    color: #1d1a1a;
+    color: #000000;
 }
 
 a:active {
-    color: #808080;
+    color: #ffffff;
 }
 
 a:hover {
@@ -67,23 +69,38 @@ a:hover {
     width: 70%;
     height: auto;
     float: left;
-    margin: 5px auto;
+    margin: 1% 1%;
+    border-radius: 5px;
     background: #c5b8b8;
+}
+
+.articulo1 {
+    margin: 1% 5%;
+}
+
+.articulo2 {
+    margin: 1% 5%;
+}
+
+.articulo3 {
+    margin: 1% 5%;
 }
 
 .contenido {
     width: 25%;
     height: auto;
     float: right;
-    margin: 20px 20px;
+    margin: 2% 1%;
     background: #808080;
-    box-shadow: 0px 0px 50px #EE1414;
+    border-radius: 20px;
+    box-shadow: 10px 5px 30px #DB1616;
+    font: 22px "Comic Sans MS", cursive;
 }
 
 .pie_pagina {
-    color: #ffd800;
+    color: #DB1616;
     clear: both;
     text-align: center;
     padding: 1%;
-    border-bottom: 2px solid #EE1414;
+    border-bottom: 2px solid #DB1616;
 }
