--- a/paginas_web/hojas_estilo/practica.css
+++ b/paginas_web/hojas_estilo/practica.css
@@ -41,11 +41,13 @@ body {
 }
 
 #general {
-    border: 10px solid #848484;
     margin: 10px auto;
     width: 670px;
     height: 1400px;
-    border-radius: 10px;
+    border-left: 10px solid #848484;
+    border-right: 10px solid #848484;
+    border-bottom: 0px;
+    border-top: 0px;
     border-style: dashed;
 }
 
