--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     width: 9%;
     height: auto;
     float: left;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    border-radius: 50%;
+    background-size: 100% auto;
 }
 
 .encabezado {
