--- a/pg/css/cajamarca.css
+++ b/pg/css/cajamarca.css
@@ -1,101 +1,154 @@
-body {
-    line-height: 1.8;
-    color: #000000;
-    height: 100%;
-    margin: 0;
-}
-
-h2 {
-    font-family: 'Montez', cursive;
-    font-size: 50px;
-}
-
-p {
-    font-family: 'Clicker Script', cursive;
-    font-size: 20px;
-}
-
-.ex2 {
-    max-width: 500px;
-    margin: auto;
-}
-
-div.opacidad {
-    opacity: 0.6;
-    filter: alpha(opacity=60);
-    /* For IE8 and earlier */
-}
-
-.grad1 {
-    height: 200px;
-    background: red;
-    font-family: 'Cinzel Decorative', cursive;
-    background: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(191, 176, 245));
-}
-
-.mySlides {
-    display: none
-}
-
-img {
-    width: 100%;
-    height: auto;
-}
-
-.sidenav {
-    padding-top: 60px;
-    height: 100%;
-    text-justify: centro;
-}
-
-.centro {
-    padding-top: 40px;
-    padding-bottom: 40px;
-    border: 2px solid #2e2842;
-    border-style: solid;
-}
-
-.row.content {
-    height: 450px;
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 10px 50px;
-    text-decoration: none;
-}
-
-li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: rgb(132, 102, 160);
-}
-
-@media screen and (max-width: 767px) {
-    .sidenav {
-        height: auto;
-        padding: 25px;
-    }
-    .row.content {
-        height: auto;
-    }
-}
+        body {
+            line-height: 1.8;
+            background: #1FE2F3;
+            height: 99%;
+            margin: 0;
+        }
+        
+        .w3-top {
+            background: #1974B6;
+        }
+        
+        #inicio {
+            width: 50px;
+            height: 50px;
+            text-align: center;
+        }
+        
+        #myHeader {
+            margin: 2% auto;
+            background-image: url("/img/cajamarca/fondo.jpg");
+            text-shadow: 0 0 20px #fefcc9, 2px -2px 3px #feec85, -4px -4px 5px #ffae34, 5px -10px 6px #ec760c, -5px -12px 8px #cd4606, 0 -15px 20px #973716, 2px -15px 20px #451b0e;
+            font-family: fantasy;
+        }
+        
+        h1 {
+            font: 200% sans-serif;
+            font-size: 100px;
+            font-weight: bold;
+        }
+        
+        h2 {
+            font-size: 50px;
+            font-weight: bold;
+        }
+        
+        h3 {
+            font-size: 40px;
+            font-weight: bold;
+        }
+        
+        h4 {
+            font-size: 30px;
+            font-weight: bold;
+        }
+        
+        p {
+            font-family: sans-serif;
+            font-size: 15px;
+        }
+        
+        .ex2 {
+            max-width: 500px;
+            margin: auto;
+        }
+        
+        div.opacidad {
+            opacity: 0.6;
+            filter: alpha(opacity=60);
+            /* For IE8 and earlier */
+        }
+        
+        .grad1 {
+            height: 200px;
+            background: red;
+            font-family: 'Cinzel Decorative', cursive;
+            background: linear-gradient(to right, rgba(255, 0, 0, 0), rgb(191, 176, 245));
+        }
+        
+        .mySlides {
+            display: none
+        }
+        
+        img {
+            width: 250px;
+            height: 250px;
+        }
+        
+        .sidenav {
+            padding-top: 60px;
+            height: 100%;
+            text-justify: centro;
+        }
+        
+        .centro {
+            padding-top: 40px;
+            padding-bottom: 40px;
+            border: 2px solid #2e2842;
+            border-style: solid;
+        }
+        
+        .row.content {
+            height: 450px;
+        }
+        
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: #333;
+            position: fixed;
+            top: 0;
+            width: 100%;
+        }
+        
+        li {
+            float: left;
+        }
+        
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 10px 50px;
+            text-decoration: none;
+        }
+        
+        li a:hover:not(.active) {
+            background-color: #111;
+        }
+        
+        .active {
+            background-color: rgb(132, 102, 160);
+        }
+        
+        @media screen and (max-width: 767px) {
+            .sidenav {
+                height: auto;
+                padding: 25px;
+            }
+            .row.content {
+                height: auto;
+            }
+        }
+        
+        #subtitulo {
+            margin: 50px auto;
+            background: #5AD527;
+            box-shadow: 20px 20px 20px #DED710;
+        }
+        
+        .social {
+            text-align: center;
+            font-size: 30px;
+            font-weight: bold;
+        }
+        
+        #myCarousel {
+            box-shadow: 0px 0px 100px #18FC13;
+        }
+        
+        #informacion {
+            margin: 80px auto;
+        }
