--- a/pg/css/cajamarca.css
+++ b/pg/css/cajamarca.css
@@ -45,7 +45,7 @@
         
         p {
             font-family: sans-serif;
-            font-size: 15px;
+            font-size: 17px;
         }
         
         .ex2 {
@@ -151,4 +151,19 @@
         
         #informacion {
             margin: 80px auto;
+        }
+        
+        .pie_pagina {
+            margin: 1% auto;
+            color: #DB1616;
+            clear: both;
+            text-align: center;
+            padding: 1%;
+            border-bottom: 2px solid #DB1616;
+            font-weight: bold;
+        }
+        
+        #texto {
+            font-size: 20px;
+            font-weight: bold;
         }
