--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,4 @@
-/*
-  Theme Name: BizPage
-  Theme URL: https://bootstrapmade.com/bizpage-bootstrap-business-template/
-  Author: BootstrapMade.com
-  License: https://bootstrapmade.com/license/
-*/
-
-
-/*--------------------------------------------------------------
-# General
---------------------------------------------------------------*/
+/* General */
 
 body {
     background: #fff;
@@ -47,7 +37,7 @@ h6 {
 }
 
 
-/* Back to top button */
+/* Boton volver al inicio */
 
 .back-to-top {
     position: fixed;
@@ -79,9 +69,7 @@ h6 {
 }
 
 
-/*--------------------------------------------------------------
-# Header
---------------------------------------------------------------*/
+/* Header */
 
 #header {
     padding: 30px 0;
@@ -143,9 +131,7 @@ h6 {
 }
 
 
-/*--------------------------------------------------------------
-# Intro Section
---------------------------------------------------------------*/
+/* Intro Section */
 
 #intro {
     display: table;
@@ -284,12 +270,10 @@ h6 {
 }
 
 
-/*--------------------------------------------------------------
-# Navigation Menu
---------------------------------------------------------------*/
+/* Navigation Menu */
 
 
-/* Nav Menu Essentials */
+/* Elementos Generales del Menu */
 
 .nav-menu,
 .nav-menu * {
@@ -330,7 +314,7 @@ h6 {
 }
 
 
-/* Nav Menu Arrows */
+/* Flechas del Menu */
 
 .sf-arrows .sf-with-ul {
     padding-right: 30px;
@@ -350,7 +334,7 @@ h6 {
 }
 
 
-/* Nav Meu Container */
+/* Contenedor del Menu */
 
 #nav-menu-container {
     float: right;
@@ -370,7 +354,7 @@ h6 {
 }
 
 
-/* Nav Meu Styling */
+/* Estilo del Menu */
 
 .nav-menu a {
     padding: 0 8px 10px 8px;
@@ -422,7 +406,7 @@ h6 {
 }
 
 
-/* Mobile Nav Toggle */
+/* Menu Movil */
 
 #mobile-nav-toggle {
     position: fixed;
@@ -450,7 +434,7 @@ h6 {
 }
 
 
-/* Mobile Nav Styling */
+/* Style Menu Movil */
 
 #mobile-nav {
     position: fixed;
@@ -531,7 +515,7 @@ h6 {
 }
 
 
-/* Mobile Nav body classes */
+/* Body Menu Movil */
 
 body.mobile-nav-active {
     overflow: hidden;
@@ -546,63 +530,17 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/*--------------------------------------------------------------
-# Sections
---------------------------------------------------------------*/
+/* Main */
 
 
-/* Sections Header
---------------------------------*/
-
-.section-header h3 {
-    font-size: 32px;
-    color: #111;
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: 700;
-    position: relative;
-    padding-bottom: 15px;
-}
-
-.section-header h3::before {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 120px;
-    height: 1px;
-    background: #ddd;
-    bottom: 1px;
-    left: calc(50% - 60px);
-}
-
-.section-header h3::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 40px;
-    height: 3px;
-    background: #18d26e;
-    bottom: 0;
-    left: calc(50% - 20px);
-}
-
-.section-header p {
-    text-align: center;
-    padding-bottom: 30px;
-    color: #333;
-}
-
-
-/* Section with background
---------------------------------*/
+/* General */
 
 .section-bg {
     background: #f7f7f7;
 }
 
 
-/* Featured Services Section
---------------------------------*/
+/* Menu Section */
 
 #featured-services {
     background: #000;
@@ -645,8 +583,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* About Us Section
---------------------------------*/
+/* About Us Section */
 
 #about {
     background: url("../img/about-bg.jpg") center top no-repeat fixed;
@@ -684,6 +621,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #about .about-col .img img {
     border-radius: 4px 4px 0 0;
+}
+
+#info {
+    width: 50%;
+    height: 150px;
+    margin: auto;
+    display: block;
 }
 
 #about .about-col .icon {
@@ -742,8 +686,48 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* Services Section
---------------------------------*/
+/* Section Header */
+
+.section-header h3 {
+    font-size: 32px;
+    color: #111;
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 700;
+    position: relative;
+    padding-bottom: 15px;
+}
+
+.section-header h3::before {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 120px;
+    height: 1px;
+    background: #ddd;
+    bottom: 1px;
+    left: calc(50% - 60px);
+}
+
+.section-header h3::after {
+    content: '';
+    position: absolute;
+    display: block;
+    width: 40px;
+    height: 3px;
+    background: #18d26e;
+    bottom: 0;
+    left: calc(50% - 20px);
+}
+
+.section-header p {
+    text-align: center;
+    padding-bottom: 30px;
+    color: #333;
+}
+
+
+/* Services Section */
 
 #services {
     background: #fff;
@@ -789,8 +773,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* Call To Action Section
---------------------------------*/
+/* Call To Action Section */
 
 #call-to-action {
     background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
@@ -819,7 +802,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     border-radius: 25px;
     transition: 0.5s;
     margin-top: 10px;
-    border: 2px solid #fff;
+    border: 2px solid #18d26e;
     color: #000000;
 }
 
@@ -829,89 +812,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* Call To Action Section
---------------------------------*/
-
-#skills {
-    padding: 60px 0;
-}
-
-#skills .progress {
-    height: 35px;
-    margin-bottom: 10px;
-}
-
-#skills .progress .skill {
-    font-family: "Open Sans", sans-serif;
-    line-height: 35px;
-    padding: 0;
-    margin: 0 0 0 20px;
-    text-transform: uppercase;
-}
-
-#skills .progress .skill .val {
-    float: right;
-    font-style: normal;
-    margin: 0 20px 0 0;
-}
-
-#skills .progress-bar {
-    width: 1px;
-    text-align: left;
-    transition: .9s;
-}
-
-
-/* Facts Section
---------------------------------*/
-
-#facts {
-    background: url("../img/facts-bg.jpg") center top no-repeat fixed;
-    background-size: cover;
-    padding: 60px 0 0 0;
-    position: relative;
-}
-
-#facts::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: rgba(255, 255, 255, 0.88);
-    z-index: 9;
-}
-
-#facts .container {
-    position: relative;
-    z-index: 10;
-}
-
-#facts .counters span {
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    font-size: 48px;
-    display: block;
-    color: #18d26e;
-}
-
-#facts .counters p {
-    padding: 0;
-    margin: 0 0 20px 0;
-    font-family: "Montserrat", sans-serif;
-    font-size: 14px;
-    color: #111;
-}
-
-#facts .facts-img {
-    text-align: center;
-    padding-top: 30px;
-}
-
-
-/* Portfolio Section
---------------------------------*/
+/* Portfolio Section */
 
 #portfolio {
     padding: 60px 0;
@@ -1063,8 +964,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* Clients Section
---------------------------------*/
+/* Clients Container */
 
 #clients {
     padding: 60px 0;
@@ -1100,90 +1000,13 @@ body.mobile-nav-active #mobile-nav-toggle {
     background-color: #18d26e;
 }
 
-
-/* Testimonials Section
---------------------------------*/
-
-#testimonials {
-    padding: 60px 0;
-}
-
-#testimonials .section-header {
-    margin-bottom: 40px;
-}
-
-#testimonials .testimonial-item {
-    text-align: center;
-}
-
-#testimonials .testimonial-item .testimonial-img {
-    width: 120px;
-    border-radius: 50%;
-    border: 4px solid #fff;
-    margin: 0 auto;
-}
-
-#testimonials .testimonial-item h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin: 10px 0 5px 0;
-    color: #111;
-}
-
-#testimonials .testimonial-item h4 {
-    font-size: 14px;
-    color: #999;
-    margin: 0 0 15px 0;
-}
-
-#testimonials .testimonial-item .quote-sign-left {
-    margin-top: -15px;
-    padding-right: 10px;
-    display: inline-block;
-    width: 37px;
-}
-
-#testimonials .testimonial-item .quote-sign-right {
-    margin-bottom: -15px;
-    padding-left: 10px;
-    display: inline-block;
-    max-width: 100%;
-    width: 37px;
-}
-
-#testimonials .testimonial-item p {
-    font-style: italic;
-    margin: 0 auto 15px auto;
-}
-
-@media (min-width: 992px) {
-    #testimonials .testimonial-item p {
-        width: 80%;
-    }
-}
-
-#testimonials .owl-nav,
-#testimonials .owl-dots {
-    margin-top: 5px;
-    text-align: center;
-}
-
-#testimonials .owl-dot {
-    display: inline-block;
-    margin: 0 5px;
-    width: 12px;
-    height: 12px;
-    border-radius: 50%;
-    background-color: #ddd;
-}
-
-#testimonials .owl-dot.active {
-    background-color: #18d26e;
+#carrusel {
+    width: auto;
+    height: 200px;
 }
 
 
-/* Team Section
---------------------------------*/
+/* Team Section */
 
 #team {
     background: #fff;
@@ -1259,8 +1082,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/* Contact Section
---------------------------------*/
+/* Contact Section */
 
 #contact {
     padding: 60px 0;
@@ -1377,9 +1199,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 
-/*--------------------------------------------------------------
-# Footer
---------------------------------------------------------------*/
+/* Footer */
 
 #footer {
     background: #000;
