--- a/css/style.css
+++ b/css/style.css
@@ -1143,59 +1143,15 @@ body.mobile-nav-active #mobile-nav-toggle {
     }
 }
 
-#contact .form #sendmessage {
-    color: #18d26e;
+#ubicacion {
     border: 1px solid #18d26e;
-    display: none;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-    margin-bottom: 15px;
-}
-
-#contact .form #errormessage {
-    color: red;
-    display: none;
-    border: 1px solid red;
-    text-align: center;
-    padding: 15px;
-    font-weight: 600;
-    margin-bottom: 15px;
-}
-
-#contact .form #sendmessage.show,
-#contact .form #errormessage.show,
-#contact .form .show {
-    display: block;
-}
-
-#contact .form .validation {
-    color: red;
-    display: none;
-    margin: 0 0 20px;
-    font-weight: 400;
-    font-size: 13px;
-}
-
-#contact .form input,
-#contact .form textarea {
-    padding: 10px 14px;
-    border-radius: 0;
-    box-shadow: none;
-    font-size: 15px;
-}
-
-#contact .form button[type="submit"] {
-    background: #18d26e;
-    border: 0;
-    padding: 10px 30px;
-    color: #fff;
-    transition: 0.4s;
-    cursor: pointer;
-}
-
-#contact .form button[type="submit"]:hover {
-    background: #13a456;
+    padding: 10px;
+    background-color: #18d26e;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Helvetica', sans-serif;
+    border-radius: 50px;
 }
 
 
